--- a/inabie/src/app/app.html
+++ b/inabie/src/app/app.html
@@ -15,49 +15,47 @@
             </ion-item>
 
             <ion-item class="item-icon-left" menu-close (click)="terminos()">
-                <ion-icon name="book"></ion-icon>Terminos y condiciones
+                <ion-icon name="book"></ion-icon> Terminos y condiciones
             </ion-item>
 
 
 
-            <!-- <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button> -->
+
         </ion-list>
         <ion-list>
             <ion-list-header>
                 Sobre Nosotros
-              </ion-list-header>
-              <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-                ¿Quiénes Somos? 
-            </ion-item>
+            </ion-list-header>
             <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-                Historia 
+                ¿Quiénes Somos?
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-                Organigrama 
+            <ion-item class="item-icon-left" menu-close (click)="Historia()">
+                Historia
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-                Despacho del director 
+            <ion-item class="item-icon-left" menu-close (click)="Organigrama()">
+                Organigrama
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-              Marco Legal
+            <ion-item class="item-icon-left" menu-close (click)="Despacho()">
+                Despacho del director
+            </ion-item>
+            <ion-item class="item-icon-left" menu-close (click)="MarcoLegal()">
+                Marco Legal
             </ion-item>
         </ion-list>
         <ion-list>
             <ion-list-header>
                 Servicios
-              </ion-list-header>
-              <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
+            </ion-list-header>
+            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
                 Servicio de Alimentación Escolar (PAE)
             </ion-item>
             <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-           Servicio de Nutricion y Salud
+                Servicio de Nutricion y Salud
             </ion-item>
             <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
-                Programa de Servicio Social 
+                Programa de Servicio Social
             </ion-item>
-            
+
         </ion-list>
     </ion-content>
 
