--- a/inabie/src/pages/terminos/terminos.scss
+++ b/inabie/src/pages/terminos/terminos.scss
@@ -1,3 +1,10 @@
-page-terminos {
+page-terminos {}
 
+.imgterm {
+    height: 150px;
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%
 }
