--- a/inabie/src/app/app.html
+++ b/inabie/src/app/app.html
@@ -29,30 +29,30 @@
             <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
                 ¿Quiénes Somos?
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="Historia()">
+            <!-- <ion-item class="item-icon-left" menu-close (click)="Historia()">
                 Historia
-            </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="Organigrama()">
+            </ion-item> -->
+            <!-- <ion-item class="item-icon-left" menu-close (click)="Organigrama()">
                 Organigrama
-            </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="Despacho()">
+            </ion-item> -->
+            <!-- <ion-item class="item-icon-left" menu-close (click)="Despacho()">
                 Despacho del director
-            </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="MarcoLegal()">
+            </ion-item> -->
+            <!-- <ion-item class="item-icon-left" menu-close (click)="MarcoLegal()">
                 Marco Legal
-            </ion-item>
+            </ion-item> -->
         </ion-list>
         <ion-list>
             <ion-list-header>
                 Servicios
             </ion-list-header>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
+            <ion-item class="item-icon-left" menu-close (click)="Alimentacion()">
                 Servicio de Alimentación Escolar (PAE)
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
+            <ion-item class="item-icon-left" menu-close (click)="Salud()">
                 Servicio de Nutricion y Salud
             </ion-item>
-            <ion-item class="item-icon-left" menu-close (click)="QuienesSomos()">
+            <ion-item class="item-icon-left" menu-close (click)="Social()">
                 Programa de Servicio Social
             </ion-item>
 
